--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
 
 <body>
     <div class="container">
-        <h1 class="my-5">Titolo</h1>
-        <code class="fs-3" id="result">Esempio</code>
+        <h1 class="my-5">JOIN OUR TEAM</h1>
+
+        <div id="card-container"></div>
+
     </div>
 
 
